--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "sudo node app.js",
+    "start:node": "sudo node app.js",
+    "start": "sudo pm2 start app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "raehan",
