--- a/front/package.json
+++ b/front/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "next -p 3060",
     "build": "cross-env ANALYZE=true NODE_ENV=production next build",
-    "build:cli": "NODE_ENV=production next build",
+    "build:tmp": "NODE_ENV=production next build",
     "start": "cross-env NODE_ENV=production next start -p 80",
-    "start:cli": "NODE_ENV=production next start -p 80"
+    "start:tmp": "NODE_ENV=production next start -p 80"
   },
   "keywords": [],
   "author": "Raehan",
