--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -1,10 +1,18 @@
 {
-  "parser": "babel-eslint",
+//  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parse",
   "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
+//    "ecmaVersion": 2020,
+//    "sourceType": "module",
+//    "ecmaFeatures": {
+//      "jsx": true
+//    }
+    "requireConfigFile": false,
+    "babelOptions": {
+      "babelrc": false,
+      "configFile": false,
+      // your babel options
+      "presets": ["@babel/preset-env"]
     }
   },
   "env": {
