--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -1,18 +1,10 @@
 {
-//  "parser": "babel-eslint",
-  "parser": "@babel/eslint-parse",
+  "parser": "babel-eslint",
   "parserOptions": {
-//    "ecmaVersion": 2020,
-//    "sourceType": "module",
-//    "ecmaFeatures": {
-//      "jsx": true
-//    }
-    "requireConfigFile": false,
-    "babelOptions": {
-      "babelrc": false,
-      "configFile": false,
-      // your babel options
-      "presets": ["@babel/preset-env"]
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
     }
   },
   "env": {
